[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/RobotoCondensed-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/RobotoCondensed-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sprites/circle_aa (small).png" type="Texture" id=3]
[ext_resource path="res://main_menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.49829
margin_bottom = -1.49829
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [  ]
}

[node name="LabelTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -432.5
margin_top = -240.957
margin_right = 476.5
margin_bottom = -98.9575
custom_fonts/font = SubResource( 1 )
text = "Achtung, die Kurve!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Divider" type="ColorRect" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 40.0
margin_top = -80.9575
margin_right = -40.0
margin_bottom = -69.9575

[node name="LabelInstructions" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -222.0
margin_top = -30.0
margin_right = 222.0
margin_bottom = 6.0
custom_fonts/font = SubResource( 2 )
text = "Press appropriate keys to join"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = 37.056
margin_right = 350.0
margin_bottom = 574.056
custom_constants/separation = 29
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlueContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 700.0
margin_bottom = 36.0
size_flags_stretch_ratio = 0.0
custom_constants/separation = 390

[node name="Label" type="Label" parent="VBoxContainer/BlueContainer"]
margin_right = 149.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.74902, 1, 1 )
text = "BLUE (A / D)"

[node name="CheckMark" type="TextureRect" parent="VBoxContainer/BlueContainer"]
visible = false
margin_left = 539.0
margin_top = 9.0
margin_right = 557.0
margin_bottom = 27.0
size_flags_vertical = 4
texture = ExtResource( 3 )

[node name="OrangeContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 65.0
margin_right = 700.0
margin_bottom = 101.0
custom_constants/separation = 151

[node name="Label" type="Label" parent="VBoxContainer/OrangeContainer"]
margin_right = 388.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.498039, 0.309804, 1 )
text = "ORANGE (L.ARROW / R.ARROW)"

[node name="CheckMark" type="TextureRect" parent="VBoxContainer/OrangeContainer"]
visible = false
margin_left = 539.0
margin_top = 9.0
margin_right = 557.0
margin_bottom = 27.0
size_flags_vertical = 4
texture = ExtResource( 3 )

[node name="GreenContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 130.0
margin_right = 700.0
margin_bottom = 166.0
custom_constants/separation = 371

[node name="Label" type="Label" parent="VBoxContainer/GreenContainer"]
margin_right = 168.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.678431, 1, 0.180392, 1 )
text = "GREEN (V / B)"

[node name="CheckMark" type="TextureRect" parent="VBoxContainer/GreenContainer"]
visible = false
margin_left = 539.0
margin_top = 9.0
margin_right = 557.0
margin_bottom = 27.0
size_flags_vertical = 4
texture = ExtResource( 3 )

[node name="PurpleContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 195.0
margin_right = 700.0
margin_bottom = 231.0
grow_vertical = 0
custom_constants/separation = 365

[node name="Label" type="Label" parent="VBoxContainer/PurpleContainer"]
margin_right = 174.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.729412, 0.329412, 0.831373, 1 )
text = "PURPLE (I / O)"

[node name="CheckMark" type="TextureRect" parent="VBoxContainer/PurpleContainer"]
visible = false
margin_left = 539.0
margin_top = 9.0
margin_right = 557.0
margin_bottom = 27.0
size_flags_vertical = 4
texture = ExtResource( 3 )

[node name="LabelStart" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -70.0
margin_right = 180.0
margin_bottom = -34.0
custom_fonts/font = SubResource( 2 )
text = "Press enter to start"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
